--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VR Company | VR制作・Web制作・VR映像制作</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/index.css" />
 
     <!-- Font AwesomeのCDNを読み込む -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
    <script type="text/javascript">
-    var password = "duebshfg"; // ここに設定したいパスワードを入れる
+    var password = "あ"; // ここに設定したいパスワードを入れる
     var pass1 = prompt('パスワードを入力してください:');
     if (pass1 != password) {
       alert("間違ったパスワードです！");
@@ -20,19 +22,21 @@
   <body>
     <header>
       <nav>
-        <h1>PORTFOLIO</h1>
+        <h1><a href="index.html">PORTFOLIO</a></h1>
         <ul>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#work">WORK</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="works.html">WORK</a></li>
+          <li><a href="services.html">SERVICES</a></li>
+          <li><a href="prices.html">PRICES</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
 
     <section class="hero">
       <div class="hero-content">
-        <h3>Hachisu Shun</h3>
-        <h2>蜂須 瞬</h2>
+        <h3>New Impact</h3>
+        <h2>VRで新たな価値を生み出す</h2>
         <p>VR・Web開発、VRの180度3D映像制作をお任せください。</p>
         <a href="#contact" class="btn">お問い合わせ</a>
       </div>
