--- a/thanks.html
+++ b/thanks.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/thanks.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+  <script type="text/javascript">
+   var password = "duebshfg"; // ここに設定したいパスワードを入れる
+   var pass1 = prompt('パスワードを入力してください:');
+   if (pass1 != password) {
+     alert("間違ったパスワードです！");
+     window.location = "https://www.google.com"; // パスワードが間違っている場合、別のページにリダイレクト
+   }
+ </script>
 </head>
 <body>
     <header>
