--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font AwesomeのCDNを読み込む -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
    <script type="text/javascript">
-    var password = "あ"; // ここに設定したいパスワードを入れる
+    var password = "duebshfg"; // ここに設定したいパスワードを入れる
     var pass1 = prompt('パスワードを入力してください:');
     if (pass1 != password) {
       alert("間違ったパスワードです！");
