contact遷移先修正

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <main>
         <section id="contact">
           <h2>お問い合わせ</h2>
-          <form action="https://formsubmit.co/shun.hachisu1003@gmail.com" method="POST">
+          <form action="https://hachisuvr.github.io/thanks.html" method="POST">
             <!-- メール通知内容に表示される -->
             <input type="hidden" name="_subject" value="ポートフォリオからの新規問い合わせ">
             
