--- a/prices.html
+++ b/prices.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VR Company | VR制作・Web制作・VR映像制作</title>
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/contact.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/footer.css">
 
-  <script type="text/javascript">
-   var password = "duebshfg"; // ここに設定したいパスワードを入れる
-   var pass1 = prompt('パスワードを入力してください:');
-   if (pass1 != password) {
-     alert("間違ったパスワードです！");
-     window.location = "https://www.google.com"; // パスワードが間違っている場合、別のページにリダイレクト
-   }
- </script>
-</head>
-<body>
-    <header>
-        <nav>
-          <h1><a href="index.html">PORTFOLIO</a></h1>
-          <ul>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="works.html">WORK</a></li>
-            <li><a href="services.html">SERVICES</a></li>
-            <li><a href="prices.html">PRICES</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-        </nav>
-    </header>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+
+    <script type="text/javascript">
+      var password = "duebshfg"; // ここに設定したいパスワードを入れる
+      var pass1 = prompt("パスワードを入力してください:");
+      if (pass1 != password) {
+        alert("間違ったパスワードです！");
+        window.location = "https://www.google.com"; // パスワードが間違っている場合、別のページにリダイレクト
+      }
+    </script>
+  </head>
+  <body>
+    <header id="header"></header>
+    <footer id="footer"></footer>
+
+    <script src="scripts/header.js"></script>
+    <script src="scripts/footer.js"></script>
+  </body>
+</html>
