--- a/thanks.html
+++ b/thanks.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VR Company | VR制作・Web制作・VR映像制作</title>
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/thanks.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-</head>
-<body>
-    <header>
-        <nav>
-          <h1><a href="index.html">PORTFOLIO</a></h1>
-          <ul>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="works.html">WORK</a></li>
-            <li><a href="services.html">SERVICES</a></li>
-            <li><a href="prices.html">PRICES</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-        </nav>
-    </header>
-<body>
-  <div class="thanks-container">
-    <h1>送信完了</h1>
-    <p>お問い合わせありがとうございます。</p>
-    <p>内容を確認の上、折り返しご連絡いたします。</p>
-    <a href="index.html" class="btn">トップに戻る</a>
-  </div>
-</body>
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/thanks.css" />
+    <link rel="stylesheet" href="styles/footer.css">
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header id="header"></header>
+
+    <div class="thanks-container">
+      <h1>送信完了</h1>
+      <p>お問い合わせありがとうございます。</p>
+      <p>内容を確認の上、折り返しご連絡いたします。</p>
+      <a href="index.html" class="btn">トップに戻る</a>
+    </div>
+    <footer id="footer"></footer>
+
+    <script src="scripts/header.js"></script>
+    <script src="scripts/footer.js"></script>
+  </body>
 </html>
