--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <main>
       <section id="contact">
         <h2>お問い合わせ</h2>
-        <form action="https://88shun.github.io/sample-company-website/thanks.html" method="POST">
+        <form action="https://hachisuvr.github.io/thanks.html" method="POST">
           <!-- メール通知内容に表示される -->
           <input
             type="hidden"
@@ -45,7 +45,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://hachisuvr.github.io/thanks.html"
+            value="https://88shun.github.io/sample-company-website/contact.html"
           />
 
           <label for="name">お名前（必須）</label>
