--- a/thanks.html
+++ b/thanks.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/thanks.css" />
-    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/footer.css" />
 
     <link
       rel="stylesheet"
@@ -16,13 +16,14 @@
   </head>
   <body>
     <header id="header"></header>
-
-    <div class="thanks-container">
-      <h1>送信完了</h1>
-      <p>お問い合わせありがとうございます。</p>
-      <p>内容を確認の上、折り返しご連絡いたします。</p>
-      <a href="index.html" class="btn">トップに戻る</a>
-    </div>
+    <main>
+      <div class="thanks-container">
+        <h1>送信完了</h1>
+        <p>お問い合わせありがとうございます。</p>
+        <p>内容を確認の上、折り返しご連絡いたします。</p>
+        <a href="index.html" class="btn">トップに戻る</a>
+      </div>
+    </main>
     <footer id="footer"></footer>
 
     <script src="scripts/header.js"></script>
