--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <main>
       <section id="contact">
         <h2>お問い合わせ</h2>
-        <form action="https://hachisuvr.github.io/thanks.html" method="POST">
+        <form action="https://formsubmit.co/shun.hachisu1003@gmail.com" method="POST">
           <!-- メール通知内容に表示される -->
           <input
             type="hidden"
