--- a/prices.html
+++ b/prices.html
@@ -6,8 +6,8 @@
     <title>VR Company | VR制作・Web制作・VR映像制作</title>
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/contact.css" />
-    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/prices.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
 
     <link
       rel="stylesheet"
@@ -25,6 +25,79 @@
   </head>
   <body>
     <header id="header"></header>
+
+    <main class="prices-main">
+      <section class="price-section">
+        <h2>WebVR制作 料金表</h2>
+        <table class="price-table">
+          <thead>
+            <tr>
+              <th>サービス内容</th>
+              <th>価格（税抜）</th>
+              <th>備考</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>簡易VRワールド制作（展示/観光向け）</td>
+              <td>¥150,000〜</td>
+              <td>静的空間、軽いインタラクション</td>
+            </tr>
+            <tr>
+              <td>マルチプレイ対応ワールド</td>
+              <td>¥300,000〜</td>
+              <td>Photonなど利用</td>
+            </tr>
+            <tr>
+              <td>WebVR体験の組み込み（iframe/ブラウザ対応）</td>
+              <td>¥50,000〜</td>
+              <td>既存Webに組み込み</td>
+            </tr>
+            <tr>
+              <td>保守・運用（月額）</td>
+              <td>¥20,000〜</td>
+              <td>軽微な修正やデータ更新</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section class="price-section">
+        <h2>Webサイト制作 料金表</h2>
+        <table class="price-table">
+          <thead>
+            <tr>
+              <th>サービス内容</th>
+              <th>価格（税抜）</th>
+              <th>備考</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>WordPress サイト制作（5ページ程度）</td>
+              <td>¥100,000〜</td>
+              <td>企業・店舗向け、スマホ対応</td>
+            </tr>
+            <tr>
+              <td>LP（ランディングページ）制作</td>
+              <td>¥50,000〜</td>
+              <td>シングルページ、CTA設計</td>
+            </tr>
+            <tr>
+              <td>オリジナルデザイン対応</td>
+              <td>＋¥30,000〜</td>
+              <td>テンプレート不使用</td>
+            </tr>
+            <tr>
+              <td>保守・運用（月額）</td>
+              <td>¥10,000〜</td>
+              <td>WordPressの更新・軽微修正</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+
     <footer id="footer"></footer>
 
     <script src="scripts/header.js"></script>
