--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var password = "duebshfg"; // ここに設定したいパスワードを入れる
       var pass1 = prompt("パスワードを入力してください:");
       if (pass1 != password) {
         alert("間違ったパスワードです！");
         window.location = "https://www.google.com"; // パスワードが間違っている場合、別のページにリダイレクト
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <header id="header"></header>
@@ -45,7 +45,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://88shun.github.io/sample-company-website/contact.html"
+            value="https://88shun.github.io/sample-company-website/thanks.html"
           />
 
           <label for="name">お名前（必須）</label>
