--- a/prices.html
+++ b/prices.html
@@ -14,21 +14,21 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var password = "duebshfg"; // ここに設定したいパスワードを入れる
       var pass1 = prompt("パスワードを入力してください:");
       if (pass1 != password) {
         alert("間違ったパスワードです！");
         window.location = "https://www.google.com"; // パスワードが間違っている場合、別のページにリダイレクト
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <header id="header"></header>
 
     <main class="prices-main">
       <section class="price-section">
-        <h2>WebVR制作 料金表</h2>
+        <h2><i class="fas fa-vr-cardboard"></i> WebVR制作 料金表</h2>
         <table class="price-table">
           <thead>
             <tr>
@@ -60,10 +60,11 @@
             </tr>
           </tbody>
         </table>
+        <p class="price-note">※価格は目安です。ご要望・内容により変動いたします。</p>
       </section>
 
       <section class="price-section">
-        <h2>Webサイト制作 料金表</h2>
+        <h2><i class="fas fa-laptop-code"></i> Webサイト制作 料金表</h2>
         <table class="price-table">
           <thead>
             <tr>
@@ -95,6 +96,12 @@
             </tr>
           </tbody>
         </table>
+        <p class="price-note">※価格は目安です。ご要望・内容により変動いたします。</p>
+      </section>
+      <section class="price-cta">
+        <h3>ご相談・お見積りはこちら</h3>
+        <p>具体的な内容に応じて、柔軟に対応いたします。</p>
+        <a href="contact.html" class="cta-btn">お問い合わせページへ</a>
       </section>
     </main>
 
